[gd_scene load_steps=5 format=3 uid="uid://ctc7g4bnxy8wg"]

[ext_resource type="Script" path="res://defeat_screen.gd" id="1_fm4sq"]
[ext_resource type="FontFile" uid="uid://b0evhrfkywnhn" path="res://Fonts/Methrock.otf" id="2_n4ev5"]
[ext_resource type="Script" path="res://label.gd" id="2_reigh"]
[ext_resource type="AudioStream" uid="uid://dosypg0wddc3r" path="res://audio/text_sound.wav" id="3_4e8cf"]

[node name="DefeatScreen" type="Node"]
script = ExtResource("1_fm4sq")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Line1" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -84.0
offset_right = 160.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_n4ev5")
theme_override_font_sizes/normal_font_size = 34
bbcode_enabled = true
text = "YOU HAVE FOUND FREEDOM... 
[shake]IN DEATH...[/shake]"
script = ExtResource("2_reigh")

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="RestartButton" type="Button" parent="."]
offset_left = 256.0
offset_top = 256.0
offset_right = 384.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0.298454, 0.000513459, 0.422608, 1)
text = "RESTART"

[node name="TextSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4e8cf")

[connection signal="timeout" from="TypewriterTimer" to="Line1" method="_on_typewriter_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
